--- a/D6.html
+++ b/D6.html
@@ -45,10 +45,10 @@
 
     <div id="tableArea"></div>
 
-    <footer>
+    <footer id="footerAlert">
       <h3>
         DOM Manipulation is super
-        <a 
+        <a id="link"
           href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Manipulating_documents"
           >AWESOME!</a
         >
