--- a/D6.html
+++ b/D6.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <h1 id="title">Questo è il titolo della pagina</h1>
-      <h2>Questo è il sottotitolo della pagina</h2>
+      <h2 id="subTitle">Questo è il sottotitolo della pagina</h2>
     </div>
 
     <div>
